deploy/kubernetes/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: traceatlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/traceatlas/web:latest
